# richin13.github.io

./: CNAME  Makefile  archives.html  authors.html  categories.html  developing-with-docker-compose.html  hello-world.html  index.html  intro-to-pelican.html  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  tags.html  welcome-to-my-redesigned-website.html
.github/workflows/: publish.yml
assets/css/: main.css
assets/js/: main.js
author/: ricardo-madriz.html
category/: misc.html  tutorials.html  web-development.html
content/: hello-world.md  intro-to-pelican.md  tutorial-docker-compose-django.md
content/articles/: welcome.md
content/pages/: about.md  projects.md
custom-theme/static/css/: main.css
custom-theme/static/js/: copy-code.js
custom-theme/templates/: article.html  article_infos.html  base.html  github.html  index.html  page.html  pagination.html  taglist.html
custom-theme/templates/sections/: extras.html  header.html
feeds/: all.atom.xml  misc.atom.xml  tutorials.atom.xml
output/: archives.html  authors.html  categories.html  developing-with-docker-compose.html  hello-world.html  index.html  intro-to-pelican.html  tags.html
output/author/: ricardo-madriz.html
output/category/: misc.html  tutorials.html
output/pages/: about-me.html
pages/: about-me.html  about.html  projects.html
tag/: design.html  pelican.html  web.html
theme/css/: code-blocks.css  main.css
u/compromiso/: index.html
u/compromiso/css/: helpers.css  style.css
u/seminario2/: index.html
u/seminario2/css/: style.css
