[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "richin13.github.io"
version = "0.1.0"
description = ""
authors = ["Ricardo Madriz <rmadriz@keplergrp.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pelican = {version = "^4.6.0", extras = ["markdown"]}
black = "^21.7b0"
isort = "^5.9.3"
docformatter = "^1.4"
